tetrateci/tsb-util/fixtures/bookinfo_multi_generated/tsb-objects/demo-1/direct/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    tsb.tetrate.io/gatewayGroup: bkift1w1dgg0
    tsb.tetrate.io/tenant: tenant1
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/workspace: bkift1ws1
  name: t1w1demobkifnd0f-gateway
  namespace: t1w1demobkifnd0f
spec:
  selector:
    app: tsb-gateway-t1w1demobkifnd0f
  servers:
  - hosts:
    - t1w1demobkifnd0f/t1w1demobkifnd0f.tetrate.test.com
    port:
      name: https-bookinfo-direct
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: t1w1demobkifnd0f-credential
      mode: SIMPLE
