tetrateci/tsb-util/fixtures/bookinfo_multi_generated/tsb-objects/demo-1/direct/reviews_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    tsb.tetrate.io/tenant: tenant1
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/trafficGroup: bkift1w1dtg0
    tsb.tetrate.io/workspace: bkift1ws1
  name: bookinfo-serviceroute
  namespace: t1w1demobkifnd0b
spec:
  gateways:
  - mesh
  hosts:
  - reviews.t1w1demobkifnd0b.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews.t1w1demobkifnd0b.svc.cluster.local
        subset: v1
      weight: 60
    - destination:
        host: reviews.t1w1demobkifnd0b.svc.cluster.local
        subset: v2
      weight: 30
    - destination:
        host: reviews.t1w1demobkifnd0b.svc.cluster.local
        subset: v3
      weight: 10
