tetrateci/tsb-util/fixtures/bookinfo_multi_generated/tsb-objects/demo-1/direct/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    tsb.tetrate.io/gatewayGroup: bkift1w1dgg0
    tsb.tetrate.io/tenant: tenant1
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/workspace: bkift1ws1
  name: bookinfo-virtualservice
  namespace: t1w1demobkifnd0f
spec:
  exportTo:
  - .
  gateways:
  - t1w1demobkifnd0f/t1w1demobkifnd0f-gateway
  hosts:
  - t1w1demobkifnd0f.tetrate.test.com
  http:
  - name: http
    route:
    - destination:
        host: productpage.t1w1demobkifnd0f.svc.cluster.local
      weight: 100
